added team picture route
